# app/Http/Controllers/Api/V1/GalleryController.php
@@ -12,7 +12,73 @@ class GalleryController extends Controller {
     const ALBUM = "App\Models\Album";
     const DOWNLOAD = "App\Models\Download";
 
-    use RESTActions;
+     /**
+     * @SWG\Get(
+     *     path="/gallery",
+     *     summary="Listar todas as galerias",
+     *     tags={"gallery"},
+     *     description="Listar todas as galerias de imagens.",
+     *     produces={"application/json"},
+     *     @SWG\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @SWG\Response(
+     *         response=401,
+     *         description="Unauthorized.",
+     *     ),
+     *     security={
+     *         {"passport": {}},
+     *     },
+     * )
+     */
+    public function all()
+    {
+        $m = self::MODEL;
+        return $this->respond(Response::HTTP_OK, $m::all());
+    }
+
+     /**
+     * @SWG\Get(
+     *     path="/gallery/{id}",
+     *     summary="Lista galeria",
+     *     tags={"gallery"},
+     *     description="Lista todas as galerias que contenham o texto pesquisado no nome.",
+     *     operationId="id",
+     *     produces={"application/json"},
+     *     @SWG\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="Código da Galeria",
+     *         required=true,
+     *         type="string",
+     *         format="int64"
+     *     ),
+     *     @SWG\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @SWG\Schema(
+     *             type="file"
+     *         ),
+     *     ),
+     *     @SWG\Response(
+     *         response="400",
+     *         description="Invalid tag value",
+     *     ),
+     *     security={
+     *         {"passport": {}},
+     *     },
+     * )
+     */
+    public function get($id)
+    {
+        $m = self::MODEL;
+        $model = $m::find($id);
+        if(is_null($model)){
+            return $this->respond(Response::HTTP_NOT_FOUND);
+        }
+        return $this->respond(Response::HTTP_OK, $model);
+    }
 
     /**
      * @SWG\Get(
