# routes/web.php
@@ -12,32 +12,24 @@
 */
 
 $router->get('/', function () use ($router) {
-    return $router->app->version();
+    return redirect('/api/documentation');
 });
 
-$router->group(['middleware' => 'auth:api', 'prefix' => 'api/v1'], function($router){
+$router->group([/*'middleware' => 'auth:api', */'prefix' => 'api/v1'], function($router){
     /**
      * Imagem for resource task
      */
 
-    $router->get('image', 'Api\V1\ImageController@all');
-    $router->get('image/{id}', 'Api\V1\ImageController@get');
-    $router->get('image/{id}/{type}', 'Api\V1\ImageController@getType');
-    $router->get('image_name/{name}', 'Api\V1\ImageController@getName');
-    $router->get('image_name/{name}/{type}', 'Api\V1\ImageController@getNameType');
-    //$router->post('image', 'Api\V1\ImageController@add');
-    //$router->put('image/{id}', 'Api\V1\ImageController@put');
-    //$router->delete('image/{id}', 'Api\V1\ImageController@remove');
+    $router->get('image/findByName', 'Api\V1\ImageController@findByName');
+
 
     /**
      * Gallery for resource task
      */
-    $router->get('gallery', 'Api\V1\GalleryController@all');
-    $router->get('gallery/{id}', 'Api\V1\GalleryController@get');
-    $router->get('gallery/{id}/zip', 'Api\V1\GalleryController@getZip');
-    $router->get('gallery/{id}/zipurl', 'Api\V1\GalleryController@getZipUrl');
-    $router->get('gallery_name/{name}', 'Api\V1\GalleryController@getName');
-    $router->get('gallery_name/{name}/{type}', 'Api\V1\GalleryController@getNameType');
+    //$router->get('gallery', 'Api\V1\GalleryController@all');
+    //$router->get('gallery/{id}', 'Api\V1\GalleryController@get');
+    //$router->get('gallery/{id}/zip', 'Api\V1\GalleryController@getZip');
+    //$router->get('gallery/{id}/zipurl', 'Api\V1\GalleryController@getZipUrl');
     //$router->post('gallery', 'Api\V1\GalleryController@add');
     //$router->put('gallery/{id}', 'Api\V1\GalleryController@put');
     //$router->delete('gallery/{id}', 'Api\V1\GalleryController@remove');
@@ -45,11 +37,11 @@ $router->group(['middleware' => 'auth:api', 'prefix' => 'api/v1'], function($rou
     /**
      * Albums for resource task
      */
-    $router->get('album', 'Api\V1\AlbumController@all');
-    $router->get('album/{id}', 'Api\V1\AlbumController@get');
-    $router->get('album/{id}/{type}', 'Api\V1\AlbumController@getType');
-    $router->get('album_name/{name}', 'Api\V1\AlbumController@getName');
-    $router->get('album_name/{name}/zip', 'Api\V1\AlbumController@getNameType');
+    //$router->get('album', 'Api\V1\AlbumController@all');
+    //$router->get('album/{id}', 'Api\V1\AlbumController@get');
+    //$router->get('album/{id}/{type}', 'Api\V1\AlbumController@getType');
+    //$router->get('album_name/{name}', 'Api\V1\AlbumController@getName');
+    //$router->get('album_name/{name}/zip', 'Api\V1\AlbumController@getNameType');
     //$router->post('album', 'Api\V1\AlbumController@add');
     //$router->put('album/{id}', 'Api\V1\AlbumController@put');
     //$router->delete('album/{id}', 'Api\V1\AlbumController@remove');
